cargo-features = ["strip"]

[package]
authors = ["Sam Rose"]
edition = "2021"
name = "lux-bot"
version = "0.1.0"

[[bin]]
name = "solution"
path = "./src/main.rs"

[dependencies.lux-ai]
path = "./lux"
package = "lux-ai-api"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"
